--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "tap test.js"
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "test": "standard && nyc tap test.js"
   },
   "keywords": [
     "ensure",
@@ -25,6 +26,9 @@
     "recast": "^0.16.1"
   },
   "devDependencies": {
+    "codecov": "^3.2.0",
+    "nyc": "^13.3.0",
+    "standard": "^12.0.1",
     "tap": "^12.1.0"
   }
 }
